[tool.poetry]
name = "cusum"
version = "0.1.0"
description = ""
authors = ["nathandbrowne <nathan.browne1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
cctx = "^1.0.0"
numpy = "^1.22.3"
ccxt = "^1.77.26"
plotly = "^5.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
