[tool.poetry]
name = "cusum"
version = "0.1.0"
description = ""
authors = ["nathandbrowne <nathan.browne1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
ccxt = "^1.77.36"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
psutil = "^5.9.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
